--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    // Firebase
+    // Firebase core
     implementation 'com.google.firebase:firebase-core:16.0.1'
+    // Firebase auth
+    implementation 'com.google.firebase:firebase-auth:16.0.3'
+    // Firebase storage
+    implementation 'com.google.firebase:firebase-storage:16.0.5'
 }
 apply plugin: 'com.google.gms.google-services'
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
