--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     // Firebase storage
     implementation 'com.google.firebase:firebase-storage:16.0.5'
+    // Firebase database
+    implementation 'com.google.firebase:firebase-database:16.0.6'
     // Glide Library
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
